overflow fixed

--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -12,6 +12,8 @@ body {
 }
 
 .site-wrap {
+  overflow: hidden;
+  max-height: 100vh;
   transition: transform 0.6s cubic-bezier(0.55, 0, 0.1, 1);
 }
 
